[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

description = "A simple cli news reader app"
license = "MIT"
authors = ["kaiyin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
newsapi = {path = "./newsapi"}
dotenv = "0.15.0"
termimad = "0.20.6"
crossterm = "0.25.0"
